--- a/css.css
+++ b/css.css
@@ -1,4 +1,4 @@
-#adivinha {
+#chute {
 	margin-left: 100px;
 	font-size: 200px;
 	padding: 20px;
@@ -6,7 +6,7 @@
 	text-align: center;
 }
 
-#senha {
+#escondido {
 	font-size: 200px;
 	padding: 20px;
 	max-width: 1em;
@@ -37,6 +37,7 @@ body {
 
 #maiorOuMenor {
 	font-size: 50px;
+    color: aqua;
 }
 
 .pisca {
